# BackendAPI

./: .gitignore  .replit  LICENSE  README.md  deploy-production.sh  package-lock.json  package.json  pyproject.toml  replit.md  start-replit.sh
attached_assets/: Pasted--LICENSE-README-md-replit-md-start-replit-sh-deploy-production-sh-uv-lock--1759244941581_1759244941581.txt  Pasted-Act-a-como-un-equipo-de-ingenieros-de-seguridad-de-nivel-CISO-de-una-instituci-n-financiera-global-c-1757886924933_1757886924933.txt
database/: schema.sql
database/migrations/: 001_initial_schema.sql
docs/: PRODUCTION-READINESS.md
docs/adr/: 001-post-quantum-cryptography.md
docs/architecture/: SYSTEM-OVERVIEW.md
docs/compliance/: CERTIFICATION-STATUS.md
docs/security/: ADMIN-AUTH-IMPLEMENTATION.md
frontend/admin-dashboard/: package.json  vite.config.ts
frontend/admin-dashboard/src/: App.css  App.tsx
frontend/merchant-portal/src/: App.tsx
infra/ci-cd/: fips-compliance-gate.sh  github-actions-example.yml
infra/gitops/argocd/: application.yaml  auth-service-app.yaml
infra/k8s/charts/api-gateway/: Chart.yaml  values.yaml
infra/k8s/charts/auth-service/: Chart.yaml  values.yaml
infra/k8s/charts/payment-gateway/: Chart.yaml  values.yaml
infra/k8s/monitoring/: prometheus-servicemonitor.yaml
infrastructure/aws/modules/: enterprise-ha-infrastructure.tf
infrastructure/k8s/charts/enterprise-rbac-chart/: values.yaml
monitoring/grafana/dashboards/: enterprise-dashboard.json
platform/compliance/audit/: audit.go  audit_test.go  blockchain.go  go.mod
platform/compliance/iso27001/: validator.go
platform/compliance/nist/: sp800-53.go
platform/compliance/orchestrator/: compliance.go
platform/compliance/pci/: validator.go
platform/compliance/soc2/: validator.go
platform/contracts/openapi/: api-gateway.yaml
platform/contracts/proto/: auth.proto  payment.proto
platform/crypto/pqc-go/: fips_init.go  go.mod  go.sum  pqc.go
platform/crypto/pqc-py/: pyproject.toml
platform/crypto/pqc-py/pqc_gov/: __init__.py  errors.py  kyber.py
platform/crypto/pqc-rs/: Cargo.toml
platform/crypto/pqc-rs/src/: lib.rs
platform/examples/government-service-template/: main.go
platform/observability/otel/: go.mod  trace.go
platform/security/hsm/: suite.go
platform/security/zkp/: verifier.go
security/policy-as-code/: pci-dss.rego
security/threat-models/: STRIDE-payment-service.md
services/go/api-gateway/: go.mod  go.sum
services/go/api-gateway/cmd/: main.go
services/go/auth-service/: go.mod  go.sum
services/go/crypto-attestation-agent/: go.mod  go.sum
services/go/rbac-service/: go.mod
services/python/advanced-analytics-service/: main.py
services/python/ai-fraud-detection-service/: main.py
services/python/blockchain-integration-service/: main.py
services/python/message-queue-service/: main.py  requirements.txt
services/python/quantum-key-distribution-service/: main.py
services/rust/payment-gateway/: Cargo.toml
services/rust/payment-gateway/migrations/: 20250914000001_initial_schema.sql
services/rust/payment-gateway/src/: main.rs  metrics.rs
services/rust/payment-gateway/src/crypto/: mod.rs  quantum_resistant.rs  zkproofs.rs
services/rust/payment-gateway/src/handlers/: advanced_security.rs  coinbase.rs  enterprise_response_structures.rs  enterprise_structures.rs  mod.rs  payment.rs  paypal.rs  stripe.rs  webhook_security_monitor.rs
services/rust/payment-gateway/src/middleware/: audit.rs  auth.rs  mod.rs  webhook_rate_limit.rs
services/rust/payment-gateway/src/models/: mod.rs  payment_request.rs
services/rust/payment-gateway/src/repository/: database.rs  mod.rs  transaction.rs
services/rust/payment-gateway/src/service/: payment_service.rs
services/rust/payment-gateway/src/tests/: mod.rs  payment_flow_tests.rs  performance_tests.rs  security_tests.rs  webhook_security_tests.rs
services/rust/payment-gateway/src/utils/: advanced_ml_algorithms.rs  crypto.rs  enhanced_fraud_service.rs  enterprise_fraud_alerting.rs  fraud_detection.rs  mod.rs  pci_masking.rs  quantum_ml_fraud_core.rs  redis_fraud_scoring.rs
services/rust/payment-gateway/tests/: compliance_claims_audit.md  evidence.md
services/rust/security-service/: Cargo.toml
services/rust/security-service/src/: app.rs  config.rs  error.rs  handlers.rs  lib.rs  logging.rs  main.rs  middleware.rs  models.rs  utils.rs
services/rust/security-service/src/services/: audit.rs  bitcoin.rs  crypto.rs  encryption.rs  hsm.rs  ipfs.rs  mod.rs  qldb.rs
services/rust/ultra-inventory-system/: Cargo.toml
services/rust/ultra-inventory-system/migrations/: 001_create_products_table.sql
services/rust/ultra-inventory-system/src/: ai_forecasting.rs  analytics.rs  integrations.rs  main.rs  models.rs  real_time_sync.rs  warehouse_management.rs
services/rust/ultra-shipping-service/: Cargo.toml
services/rust/ultra-shipping-service/src/: ai_optimizer.rs  analytics.rs  main.rs  models.rs  tracking.rs
services/rust/ultra-shipping-service/src/providers/: dhl.rs  fedex.rs  mod.rs  ups.rs  usps.rs
store/: .env.example  .screen-graph.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
store/src/: App.tsx  env.d.ts  index.css  index.tsx
store/src/components/: AboutPage.tsx  AccessibleButton.tsx  AccessibleForm.tsx  CartPanel.tsx  CategoryNavigation.tsx  CheckoutPage.tsx  CollectionsPage.tsx  DataProvider.tsx  ErrorBoundary.tsx  FeaturedCollections.tsx  Footer.tsx  Header.tsx  HealthCheck.tsx  HeroSection.tsx  LoadingSpinner.tsx  ProductDetail.tsx  ProductFilters.tsx  ProductGrid.tsx  ProductsPage.tsx  PromotionalBanner.tsx  SEOHead.tsx  TrustSection.tsx
store/src/hooks/: useApi.ts
store/src/services/: api.ts  backendApiService.ts  cryptoService.ts  paypalService.ts  stripeService.ts  webhookService.ts
store/src/stores/: authStore.ts  cartStore.ts  categoryStore.ts  collectionStore.ts  orderStore.ts  productStore.ts  themeStore.ts
store/src/types/: routes.ts
store/src/utils/: security.ts  securityHardening.ts  taxCalculator.ts  validators.ts
(+61 files in other folders)
