[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "cryptography>=46.0.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "prometheus-client>=0.23.1",
    "pydantic>=2.11.9",
    "redis>=6.4.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "uvloop>=0.21.0",
]
