[package]
name = "payment-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Financial Security Team"]
license = "CC0-1.0"
description = "Post-quantum cryptography payment gateway implementing algorithms corresponding to FIPS 203/204/205"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json", "tower-log"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "set-header"] }
hyper = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"

# Cryptography - FIPS 140-3 compliant
ring = { version = "0.17", features = ["alloc"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = "2.0"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
argon2 = "0.5"
aes-gcm = "0.10"
hkdf = "0.12"

# COSE and JWT authentication
coset = "0.3"
jsonwebtoken = "9.3"
time = "0.3"
jose-jwk = "0.1"
cbor-diag = "0.1"
minicbor = "0.19"
ciborium = "0.2"
rsa = "0.9"

# Zero-Knowledge Proofs and Advanced Cryptography for Financial-Grade Security
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"

# Post-Quantum Cryptography (NIST Standards)
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits = "0.3"

# Payment provider SDKs - using compatible versions for financial security
# stripe = { version = "0.27", features = ["async"] } # Latest version not available, using HTTP client
# paypal-rs = { version = "0.2.6", features = ["async"] } # Using reqwest directly instead

# HTTP client for payment providers  
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
url = "2.4"

# Database 
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Configuration
# config = "0.14"
# dotenv = "0.15"

# Monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
prometheus = "0.13"

# Webhook verification
hex = "0.4"
hmac = "0.12"

# Additional crypto for real verification
p256 = "0.13"
p384 = "0.13"

# PCI-DSS tokenization and caching
base64 = "0.21"
lru = "0.12"

[dev-dependencies]
tokio-test = "0.4"