[package]
name = "payment-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Financial Security Team"]
license = "CC0-1.0"
description = "Post-quantum cryptography payment gateway implementing algorithms corresponding to FIPS 203/204/205"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json", "tracing", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "compression-br", "set-header"] }
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"

# Cryptography - FIPS 140-3 compliant
ring = { version = "0.17", features = ["alloc"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = "2.0"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
argon2 = "0.5"
aes-gcm = "0.10"
hkdf = "0.12"

# COSE and JWT authentication
coset = "0.3"
jsonwebtoken = "9.3"
time = "0.3"
jose-jwk = "0.1"
cbor-diag = "0.1"
minicbor = "0.19"
ciborium = "0.2"
rsa = { version = "0.9", features = ["sha2", "std"] }
signature = "2.0"

# Zero-Knowledge Proofs and Advanced Cryptography for Financial-Grade Security
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"

# Post-Quantum Cryptography (NIST Standards)
pqcrypto-kyber = { version = "0.8", optional = true }
pqcrypto-dilithium = { version = "0.5", default-features = false, optional = true }
pqcrypto-sphincsplus = { version = "0.7", default-features = false, optional = true }
pqcrypto-traits = "0.3"

# Payment provider SDKs - using compatible versions for financial security
# stripe = { version = "0.27", features = ["async"] } # Latest version not available, using HTTP client
# paypal-rs = { version = "0.2.6", features = ["async"] } # Using reqwest directly instead

# HTTP client for payment providers  
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
url = "2.4"

# Database 
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Configuration
# config = "0.14"
# dotenv = "0.15"

# Monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
prometheus = "0.13"

# Webhook verification
hex = "0.4"
hmac = "0.12"

# Certificate parsing and validation for PayPal webhooks
x509-parser = "0.15"
der-parser = "8.2"
subtle = "2.5"
crc32fast = "1.4"
rand = "0.8"

# PCI-DSS data masking and validation
regex = "1.10"

# Additional crypto for real verification
p256 = "0.13"
p384 = "0.13"

# PKCS#11 HSM Integration for real HSM verification
cryptoki = "0.6"

# OpenSSL for real FIPS mode verification (optional)
openssl = { version = "0.10", features = ["vendored"], optional = true }

# System information for FIPS kernel checks
procfs = "0.16"

# Enterprise AI/ML Libraries for Advanced Fraud Detection
smartcore = { version = "0.3", optional = true }
linfa = { version = "0.7", optional = true }
linfa-trees = { version = "0.7", optional = true }
linfa-clustering = { version = "0.7", optional = true }
linfa-nn = { version = "0.7", optional = true }
candle-core = { version = "0.4", optional = true }
candle-nn = { version = "0.4", optional = true }
candle-transformers = { version = "0.4", optional = true }
tch = { version = "0.15", optional = true }

# Advanced Statistical Analysis
statrs = "0.16"
rustfft = "6.0"
nalgebra = "0.32"
ndarray = "0.15"
ndarray-stats = "0.5"

# Enterprise Time-Series Analysis
chrono-tz = "0.8"

# Enterprise Alerting & Notification Systems
slack-hook = { version = "0.9.1", optional = true }
teloxide = { version = "0.12", optional = true }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }

# Real-time Analytics and Streaming
lru_time_cache = "0.11"
flashmap = "0.0.4-alpha"
parking_lot = "0.12"
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"

# Enterprise Configuration Management
config = "0.14"
envy = "0.4"
dotenv = "0.15"

# Enhanced HTTP Client for External Services
reqwest-middleware = { version = "0.2", default-features = false, optional = true }
reqwest-retry = { version = "0.4", default-features = false, optional = true }

# IP Geolocation and Reputation Services
geoip2 = "0.1.7"
maxminddb = "0.24"

# Advanced JSON Processing
serde_with = "3.0"
serde_repr = "0.1"

# Enterprise Logging and Audit
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"

# Concurrent Data Structures for High-Performance
dashmap = "5.5"
once_cell = "1.19"
arc-swap = "1.6"

# Advanced Error Handling
color-eyre = "0.6"
miette = { version = "5.0", features = ["fancy"] }

# PCI-DSS tokenization and caching
base64 = "0.21"
lru = "0.12"

[features]
default = ["ml-minimal", "pq-dilithium"]
ml-full = ["dep:tch", "ml-candle", "dep:smartcore", "dep:linfa", "dep:linfa-trees", "dep:linfa-clustering", "dep:linfa-nn"]
ml-candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
ml-minimal = ["dep:smartcore"]
minimal-build = []
stripe-only = []
alerts = ["dep:slack-hook"]
http-retries = ["dep:reqwest-middleware", "dep:reqwest-retry"]
pq-kyber = ["pqcrypto-kyber"]
pq-dilithium = ["pqcrypto-dilithium"]
pq-sphincs = ["pqcrypto-sphincsplus"]
openssl-fips = ["dep:openssl"]
telegram-alerts = ["dep:teloxide"]

[dev-dependencies]
tokio-test = "0.4"