[package]
name = "security-service"
version = "0.1.0"
edition = "2021"
authors = ["Security Team <security@company.com>"]
description = "FIPS 140-3 Level 3 compliant security service with immutable audit trail using QLDB, IPFS, and Bitcoin blockchain anchoring"

[dependencies]
# Web framework
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json", "tracing", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# AWS SDK for QLDB
aws-config = "1.0"
aws-sdk-qldb = "1.0"
aws-sdk-qldbsession = "1.0"

# IPFS
ipfs-api-backend-hyper = { version = "0.6", features = ["with-builder"] }
hyper = "0.14"
hyper-rustls = "0.24"

# Bitcoin integration (use compatible versions to avoid conflicts)
bitcoin = "0.30"
bitcoincore-rpc = "0.17"

# Cryptography (FIPS 140-3 Level 3)
ring = { version = "0.17", features = ["alloc"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = "2.0"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
argon2 = "0.5"
# FIPS-compliant AEAD encryption for IPFS data protection  
aes-gcm = "0.10"  # FIPS 140-2 approved AES-256-GCM
hmac = "0.12"     # For deterministic key derivation
base64 = "0.22"
rand = "0.8"      # For secure DEK generation

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
hex = "0.4"

# Async
futures = "0.3"
async-trait = "0.1"

# Configuration
config = "0.14"

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.0"
lazy_static = "1.4"

# Rate limiting and security
governor = "0.6"