[package]
name = "ultra-shipping-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ultra-shipping-service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
anyhow = "1.0.89"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
rust_decimal = { version = "1.36.0", features = ["serde-float"] }
geo = "0.28.0"
csv = "1.3.0"
redis = { version = "0.25.4", features = ["tokio-comp"] }

# XML parsing for USPS API
quick-xml = "0.36.1"

[features]
default = ["professional-shipping", "ai-optimization", "real-time-tracking"]
professional-shipping = []
ai-optimization = []
real-time-tracking = []
enterprise-analytics = []